--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,40 @@
 name = "client"
 version = "0.1.0"
 description = ""
-authors = ["Nikhil Garg <nikhilgarg28@gmail.com>"]
+authors = ["Fennel AI <developers@fennel.ai>"]
+packages = [
+    { include = "fennel" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
 pandas = "^1.5.0"
+click = "^8.1.3"
+cloudpickle = "^2.2.0"
+arrow = "^1.2.3"
+numpy = "^1.23.3"
+requests = "^2.28.1"
+grpcio = "^1.49.1"
+grpcio-tools = "^1.49.1"
+pytest-grpc = "^0.8.0"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^4.0.1"
+black = "^22.6.0"
+mypy = "^0.961"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.mypy]
+python_version = "3.8"
+exclude = [
+    'test.*\.py$',
+]
+
+[tool.black]
+line-length = 80
+
+[tool.poetry.scripts]
+fennel = 'fennel.cli.commands:greet'
