--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ requests = "^2.28.1"
 grpcio = "^1.49.1"
 grpcio-tools = "^1.49.1"
 pytest-grpc = "^0.8.0"
+pytest-mock = "^3.9.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
