--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,7 @@ grpcio = "^1.49.1"
 grpcio-tools = "^1.49.1"
 pytest-grpc = "^0.8.0"
 pytest-mock = "^3.9.0"
-dill = "^0.3.5"
-tox = "^3.26.0"
+pytest = "^7.1.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -45,6 +44,10 @@ module = [
 
 [tool.black]
 line-length = 80
-
-[tool.poetry.scripts]
-fennel = 'fennel.cli.commands:greet'
+# 'extend-exclude' excludes files or directories in addition to the defaults
+extend-exclude = '''
+(
+    .*_pb2.py
+    | .*_pb2_grpc.py
+)
+'''
