--- a/.github/workflows/test_linux.yml
+++ b/.github/workflows/test_linux.yml
@@ -69,3 +69,4 @@ jobs:
         run: |
           source .venv/bin/activate
           poetry run pytest
+          poetry run python -m unittest discover fennel
