--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ grpcio-tools = "^1.49.1"
 pytest-grpc = "^0.8.0"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
+pydantic = "^1.10.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
