--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ pytest-grpc = "^0.8.0"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
 pydantic = "^1.10.2"
+pyarrow = "^10.0.0"
+jsondiff = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -33,10 +35,10 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 testpaths = [
-    "fennel/aggregate",
+    "fennel/dataset",
     "fennel/stream",
-    "fennel/feature",
     "fennel/lib",
+    "fennel/utils",
 ]
 
 
