--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ build-backend = "poetry.core.masonry.api"
 testpaths = [
     "fennel/dataset",
     "fennel/lib",
-    "fennel/utils",
+    "fennel/featureset"
 ]
 
 
