--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^7.1.3"
 pydantic = "^1.10.2"
 pyarrow = "^10.0.0"
 jsondiff = "^2.0.0"
+mypy-protobuf = "^3.4.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -43,8 +44,25 @@ testpaths = [
 
 
 [tool.mypy]
-python_version = "3.7"
-exclude = '''(pb2\.py$|grpc\.py$)'''
+python_version = "3.8"
+exclude = '''(pb2\.py$|grpc\.py$|_pb2.pyi)'''
+
+[[tool.mypy.overrides]]
+module = "pyarrow"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "cloudpickle"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "pandas"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "grpc"
+ignore_missing_imports = true
+
 
 [tool.black]
 line-length = 80
@@ -52,5 +70,6 @@ extend-exclude = '''
 (
     .*_pb2.py
     | .*_pb2_grpc.py
+    | fennel/gen/*.py
 )
 '''
