--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pydantic = "^1.10.2"
 pyarrow = "^10.0.0"
 jsondiff = "^2.0.0"
 mypy-protobuf = "^3.4.0"
+astpretty = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -44,7 +45,7 @@ testpaths = [
 
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.7"
 exclude = '''(pb2\.py$|grpc\.py$|_pb2.pyi)'''
 
 [[tool.mypy.overrides]]
