--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "client"
-version = "0.1.0"
+name = "fennel"
+version = "0.1.1"
 description = ""
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [
@@ -10,7 +10,6 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 pandas = "^1.5.0"
-click = "^8.1.3"
 cloudpickle = "^2.2.0"
 arrow = "^1.2.3"
 numpy = "^1.23.3"
@@ -24,8 +23,8 @@ pydantic = "^1.10.2"
 pyarrow = "^10.0.0"
 jsondiff = "^2.0.0"
 mypy-protobuf = "^3.4.0"
-astpretty = "^3.0.0"
 astunparse = "^1.6.3"
+build = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
