--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel"
-version = "0.1.2"
+version = "0.1.4"
 description = ""
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [
@@ -25,6 +25,7 @@ jsondiff = "^2.0.0"
 mypy-protobuf = "^3.4.0"
 astunparse = "^1.6.3"
 build = "^0.9.0"
+types-requests = "^2.28.11"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -41,8 +42,8 @@ testpaths = [
     "fennel/lib",
     "fennel/featureset",
     "fennel/sources",
-    "fennel/e2e_tests",
 ]
+
 
 
 [tool.mypy]
