schema: Add Embedding as type

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+fennel/proto/*.proto
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -24,6 +26,7 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+fennel/proto/
 MANIFEST
 
 # PyInstaller
