--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ mypy-protobuf = "^3.4.0"
 astunparse = "^1.6.3"
 build = "^0.9.0"
 types-requests = "^2.28.11"
+grandalf = "^0.7"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
