--- a/.github/workflows/packagr_publish.yml
+++ b/.github/workflows/packagr_publish.yml
@@ -29,7 +29,7 @@ jobs:
         id: setup-python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: 3.7
 
       #----------------------------------------------
       #  -----  install & configure poetry  -----
