--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ pytest-grpc = "^0.8.0"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
 pydantic = "^1.10.2"
-pyarrow = "^10.0.0"
 jsondiff = "^2.0.0"
 mypy-protobuf = "^3.4.0"
 astunparse = "^1.6.3"
@@ -32,6 +31,10 @@ grandalf = "^0.7"
 flake8 = "^4.0.1"
 black = "^22.6.0"
 mypy = "^0.961"
+
+[[tool.poetry.source]]
+name = "my-custom-repo"  # This name will be used in the configuration to retreive the proper credentials
+url = "https://my.customrepo.com/simple/"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -51,9 +54,6 @@ testpaths = [
 python_version = "3.7"
 exclude = '''(pb2\.py$|grpc\.py$|_pb2.pyi)'''
 
-[[tool.mypy.overrides]]
-module = "pyarrow"
-ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "cloudpickle"
