--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "0.1.6"
+version = "0.1.7"
 description = ""
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [
@@ -16,6 +16,7 @@ numpy = "^1.23.3"
 requests = "^2.28.1"
 grpcio = "^1.49.1"
 grpcio-tools = "^1.49.1"
+pyarrow = "^10.0.0"
 pytest-grpc = "^0.8.0"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
@@ -53,6 +54,10 @@ testpaths = [
 [tool.mypy]
 python_version = "3.7"
 exclude = '''(pb2\.py$|grpc\.py$|_pb2.pyi)'''
+
+[[tool.mypy.overrides]]
+module = "pyarrow"
+ignore_missing_imports = true
 
 
 [[tool.mypy.overrides]]
