--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "0.1.9"
+version = "0.2.0"
 description = ""
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [
@@ -26,15 +26,12 @@ astunparse = "^1.6.3"
 build = "^0.9.0"
 types-requests = "^2.28.11"
 grandalf = "^0.7"
+pyarrow = "^10.0.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 black = "^22.6.0"
 mypy = "^0.961"
-
-[[tool.poetry.source]]
-name = "my-custom-repo"  # This name will be used in the configuration to retreive the proper credentials
-url = "https://my.customrepo.com/simple/"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -53,6 +50,10 @@ testpaths = [
 [tool.mypy]
 python_version = "3.7"
 exclude = '''(pb2\.py$|grpc\.py$|_pb2.pyi)'''
+
+[[tool.mypy.overrides]]
+module = "pyarrow"
+ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "cloudpickle"
