--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ build = "^0.9.0"
 types-requests = "^2.28.11"
 grandalf = "^0.7"
 pyarrow = "^10.0.1"
+pytest-xdist = "^3.1.0"
+pytest-timeout = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -44,7 +46,9 @@ testpaths = [
     "fennel/featureset",
     "fennel/sources",
 ]
-
+markers = [
+    "integration: Those tests that can be run using a rust client",
+]
 
 
 [tool.mypy]
