--- a/.github/workflows/packagr_publish.yml
+++ b/.github/workflows/packagr_publish.yml
@@ -67,6 +67,8 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
+          pip install --extra-index-url ${{ secrets.CLIENT_LIB }}
+          pip install --extra-index-url ${{ secrets.FENNEL_DATASET }}
           poetry run pytest .
           poetry run python -m unittest discover fennel
 
