--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "0.2.6"
+version = "0.2.7"
 description = ""
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [
@@ -29,6 +29,8 @@ grandalf = "^0.7"
 pyarrow = "^10.0.1"
 pytest-xdist = "^3.1.0"
 pytest-timeout = "^2.1.0"
+fennel-client-lib = "^0.1.1"
+fennel-dataset = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
