--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "0.6.3"
+version = "0.7.0"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [
@@ -23,6 +23,7 @@ types-requests = "^2.28.11"
 grandalf = "^0.7"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
+great-expectations = "0.15.46"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -69,6 +70,10 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "grpc"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "great_expectations"
 ignore_missing_imports = true
 
 
