--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,11 @@ types-requests = "^2.28.11"
 grandalf = "^0.7"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
-great-expectations = "0.15.46"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 black = "^22.6.0"
-mypy = "^0.961"
+mypy = "^0.981"
 pyarrow = "^10.0.1"
 mypy-protobuf = "^3.4.0"
 pytest-grpc = "^0.8.0"
@@ -69,13 +68,14 @@ module = "pandas"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
-module = "grpc"
+module = "numpy"
+ignore_errors = true
 ignore_missing_imports = true
+
 
 [[tool.mypy.overrides]]
-module = "great_expectations"
+module = "grpc"
 ignore_missing_imports = true
-
 
 [tool.black]
 line-length = 80
