--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "0.6.3"
+version = "0.7.0"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [
@@ -27,7 +27,7 @@ pytest = "^7.1.3"
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 black = "^22.6.0"
-mypy = "^0.961"
+mypy = "^0.981"
 pyarrow = "^10.0.1"
 mypy-protobuf = "^3.4.0"
 pytest-grpc = "^0.8.0"
@@ -68,9 +68,14 @@ module = "pandas"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
-module = "grpc"
+module = "numpy"
+ignore_errors = true
 ignore_missing_imports = true
 
+
+[[tool.mypy.overrides]]
+module = "grpc"
+ignore_missing_imports = true
 
 [tool.black]
 line-length = 80
