--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pyarrow = "^10.0.1"
 mypy-protobuf = "^3.4.0"
 pytest-grpc = "^0.8.0"
 build = "^0.9.0"
+geopy = "^2.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -43,6 +44,7 @@ testpaths = [
     "fennel/lib",
     "fennel/featureset",
     "fennel/sources",
+    "docs/examples",
 ]
 markers = [
     "integration: Those tests that can be run using a rust client",
