--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,5 +1,5 @@
 build: 
-	docker-compose build
+	docker-compose build --no-cache
 up: 
 	docker-compose up
 test: # run the tests on the examples directory
