--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ types-requests = "^2.28.11"
 grandalf = "^0.7"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
+locust = "^2.15.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
