--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ grandalf = "^0.7"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
 locust = "^2.15.1"
+hurry = "^1.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
