Committing work done for rewamping pickle

--- a/.github/workflows/packagr_publish.yml
+++ b/.github/workflows/packagr_publish.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          poetry run pytest .
+          poetry run pytest . --run_slow
           poetry run python -m unittest discover fennel
 
       #----------------------------------------------
