--- a/.github/workflows/test_linux.yml
+++ b/.github/workflows/test_linux.yml
@@ -69,5 +69,5 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          poetry run pytest .
+          poetry run pytest . --run_slow
           poetry run python -m unittest discover fennel
