--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ python_files = [
 markers = [
     "integration: Those tests that can be run using a rust client",
     "data_integration: Integration tests for Data Integration",
+    "slow: Those tests that are slow",
 ]
 
 
