--- a/.github/workflows/algolia-docsearch.yml
+++ b/.github/workflows/algolia-docsearch.yml
@@ -15,4 +15,4 @@ jobs:
         env:
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_ID }}
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_ADMIN_API_KEY }}
-        run: docker run --env ALGOLIA_APP_ID=$ALGOLIA_APP_ID --env ALGOLIA_API_KEY=$ALGOLIA_API_KEY -e "CONFIG=$(cat algolia.config.json | jq -r tostring)" algolia/docsearch-scraper
+        run: docker run --env ALGOLIA_APP_ID=$ALGOLIA_APP_ID --env ALGOLIA_API_KEY=$ALGOLIA_API_KEY -e "CONFIG=$(cat ./docs/algolia.config.json | jq -r tostring)" algolia/docsearch-scraper
