--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ mypy-protobuf = "^3.4.0"
 pytest-grpc = "^0.8.0"
 build = "^0.9.0"
 geopy = "^2.3.0"
+jupyterlab = "^3.6.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
