--- a/docs/index.yml
+++ b/docs/index.yml
@@ -7,6 +7,7 @@ sidebar:
       - "getting-started/why-fennel"
       - "getting-started/installation"
       - "getting-started/quickstart"
+      - "getting-started/examples"
 
   - slug: "overview"
     title: "Overview"
