--- a/docs/index.yml
+++ b/docs/index.yml
@@ -15,6 +15,7 @@ sidebar:
       - "concepts/source"
       - "concepts/dataset"
       - "concepts/pipeline"
+      - "concepts/featureset"
 
   - slug: "architecture"
     title: "Architecture"
@@ -23,14 +24,6 @@ sidebar:
       - "architecture/architecture"
       - "architecture/read-write-separation"
       - "architecture/cost-optimizations"
-
-
-  - slug: "datasets"
-    title: "Datasets"
-    pages:
-      - "datasets/lookups"
-      - "datasets/operators"
-      - "datasets/on-demand"
 
   - slug: "featuresets"
     title: "Featuresets"
