docs/architecture: rearrange/refactor pages

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -20,10 +20,11 @@ sidebar:
   - slug: "architecture"
     title: "Architecture"
     pages:
-      - "architecture/deployment-model"
-      - "architecture/architecture"
+      - "architecture/overview"
       - "architecture/read-write-separation"
+      - "architecture/deployment-model"
       - "architecture/cost-optimizations"
+      - "architecture/privacy-security"
 
   - slug: "featuresets"
     title: "Featuresets"
