docs/architecture: add section on core technologies

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -21,6 +21,7 @@ sidebar:
     title: "Architecture"
     pages:
       - "architecture/overview"
+      - "architecture/technologies"
       - "architecture/read-write-separation"
       - "architecture/deployment-model"
       - "architecture/cost-optimizations"
