vendor in grandalf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,13 @@ pandas = "^1.5.0"
 requests = "^2.28.1"
 pydantic = "^1.10.2"
 astunparse = "^1.6.3"
-grandalf = "^0.7"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 black = "^22.6.0"
 mypy = "^0.981"
 pyarrow = "^10.0.1"
+vendoring = "^1.2.0"
 mypy-protobuf = "^3.4.0"
 build = "^0.9.0"
 geopy = "^2.3.0"
@@ -32,6 +32,27 @@ jsondiff = "^2.0.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+# inspired from - https://github.com/pypa/pip/blob/main/pyproject.toml
+
+# vendoring configuration
+[tool.vendoring]
+destination = "fennel/_vendor"
+requirements = "fennel/_vendor/vendor.txt"
+namespace = "fennel._vendor"
+
+protected-files = ["vendor.txt"]
+
+# this can be used in case we need to patch any changes to the vendored packages
+# see e.g. - https://github.com/pypa/pip/blob/main/tools/vendoring/patches/urllib3.patch
+patches-dir = "fennel/tools/vendor/patches/"
+
+[tool.vendoring.transformations]
+substitute = []
+drop = [
+    # remove bin files
+    "bin/",
+]
 
 [tool.pytest.ini_options]
 testpaths = [
