--- a/.github/workflows/python_lint.yml
+++ b/.github/workflows/python_lint.yml
@@ -8,13 +8,15 @@ jobs:
     name: Lints and typecheck
     steps:
       - name: Check out source repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up Python environment
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
       - name: Upgrade pip
         run: pip install --upgrade pip
       - name: Install packages
-        run: pip install "flake8>=4.0.1" "black>=22.6.0" "mypy>=0.961"
+        run: pip install "flake8>=4.0.1" "black>=22.6.0" "mypy==0.981" # install 0.981 of mypy since future versions seem to be not working with `--exclude`
       - name: flake8 lint
         run: flake8 .
       - name: black lint
