Add documentation for all expectations supported

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -61,6 +61,7 @@ sidebar:
       - "api-reference/operators"
       - "api-reference/aggregations"
       - "api-reference/sources"
+      - "api-reference/expectations"
 
   - 
     slug: "misc"
