--- a/.github/workflows/packagr_publish.yml
+++ b/.github/workflows/packagr_publish.yml
@@ -77,6 +77,7 @@ jobs:
       - name: Publish to Pypi
         run: |
           rm -rf dist/*
+          pip install setuptools wheel twine
           poetry build
           twine upload --repository pypi dist/* --verbose -u __token__ -p ${{ secrets.PYPI_PACKAGR_ACCESS_TOKEN }}
           
