docs: add page for monitoring / alerting

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -43,6 +43,7 @@ sidebar:
     pages:
       - "development/unit-testing"
       - "development/ci-cd-workflows"
+      - "development/monitoring-alerting"
 
   - slug: "guides"
     title: "Guides"
