--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "0.16.12"
+version = "0.16.13"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [{ include = "fennel" }]
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.8"
 pandas = "^1.0.0"
 protobuf = "^4.22.4"
+frozendict = "^2.3.8"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
