--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ jupyterlab = "^3.6.3"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
 twine = "^4.0.0"
+pyspelling = "^2.8.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
