--- a/.github/workflows/python_lint.yml
+++ b/.github/workflows/python_lint.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: 3.11
       - name: Install aspell for pyspelling
-        run: apt-get install -y aspell
+        run: sudo apt-get install -y aspell
       - name: Upgrade pip
         run: pip install --upgrade pip
       - name: Install packages
