--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
 twine = "^4.0.0"
 pyspelling = "^2.8.2"
+# A cython bug
+pyyaml = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
