--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,17 +16,17 @@ frozendict = "^2.3.8"
 flake8 = "^4.0.1"
 black = "^22.6.0"
 mypy = "^0.981"
-pyarrow = "^10.0.1"
+pyarrow = "^14.0.2"
 vendoring = "^1.2.0"
 mypy-protobuf = "^3.4.0"
 build = "^0.9.0"
 geopy = "^2.3.0"
-jupyterlab = "^3.6.3"
+jupyterlab = "^4.0.10"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
 twine = "^4.0.0"
 pyspelling = "^2.8.2"
-# A cython bug
+# A pyyaml bug when using cython, https://github.com/yaml/pyyaml/issues/601
 pyyaml = "^6.0.1"
 
 [build-system]
