--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.8"
 pandas = "^1.0.0"
 protobuf = "^4.22.4"
 frozendict = "^2.3.8"
+numpy = [
+    { version = "^1.26.3", python = ">=3.9"}
+]
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -53,6 +56,7 @@ drop = [
     # remove bin files
     "bin/",
 ]
+
 
 [tool.pytest.ini_options]
 testpaths = [
