--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^1.0.0"
 protobuf = "^4.22.4"
 frozendict = "^2.3.8"
 numpy = [
+    { version = "1.24.4", python = "<3.8" },
     { version = "^1.26.3", python = ">=3.9"}
 ]
 
