--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ pandas = "^1.0.0"
 protobuf = "^4.22.4"
 frozendict = "^2.3.8"
 numpy = [
-    { version = "1.24.4", python = "<3.8" },
-    { version = "^1.26.3", python = ">=3.9"}
+    { version = "1.24.4", python = "<3.12" },
+    { version = "^1.26.3", python = "~3.12"}
 ]
 
 [tool.poetry.dev-dependencies]
