--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "0.19.8"
+version = "0.19.9"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [{ include = "fennel" }]
@@ -11,21 +11,27 @@ python = "^3.8"
 pandas = "^1.0.0"
 protobuf = "^4.22.4"
 frozendict = "^2.3.8"
+numpy = [
+    { version = "1.24.4", python = "<3.12" },
+    { version = "^1.26.3", python = "~3.12"}
+]
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 black = "^22.6.0"
 mypy = "^0.981"
-pyarrow = "^10.0.1"
+pyarrow = "^14.0.2"
 vendoring = "^1.2.0"
 mypy-protobuf = "^3.4.0"
 build = "^0.9.0"
 geopy = "^2.3.0"
-jupyterlab = "^3.6.3"
+jupyterlab = "^4.0.10"
 pytest-mock = "^3.9.0"
 pytest = "^7.1.3"
 twine = "^4.0.0"
 pyspelling = "^2.8.2"
+# A pyyaml bug when using cython, https://github.com/yaml/pyyaml/issues/601
+pyyaml = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -51,6 +57,7 @@ drop = [
     # remove bin files
     "bin/",
 ]
+
 
 [tool.pytest.ini_options]
 testpaths = [
