--- a/docs/index.yml
+++ b/docs/index.yml
@@ -46,13 +46,13 @@ sidebar:
       - "development/ci-cd-workflows"
       - "development/console"
 
-  - slug: "monitoring"
-    title: "Monitoring"
+  - slug: "observability"
+    title: "Observability"
     pages:
-      - "monitoring/prometheus"
-      - "monitoring/grafana"
-      - "monitoring/newrelic"
-      - "monitoring/alerting"
+      - "observability/prometheus"
+      - "observability/grafana"
+      - "observability/newrelic"
+      - "observability/alerting"
 
   - slug: "guides"
     title: "Guides"
