--- a/docs/docker-compose.yml
+++ b/docs/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services: 
   preview: 
-    build: "https://${GITHUB_TOKEN}:@github.com/${GITHUB_REPO}.git#dev"
+    build: "https://${GITHUB_TOKEN}:@github.com/${GITHUB_REPO}.git#rk-new-docs"
     ports:
       - 3001:3001
     volumes: 
