missing quotation mark

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -13,6 +13,6 @@ sidebar:
 
 
   - slug: "api-reference/aggregations"
-    title: "Aggregation
+    title: "Aggregation"
     pages:
       - "api-reference/aggregations"
