--- a/docs/api.yml
+++ b/docs/api.yml
@@ -4,15 +4,46 @@ sidebar:
     title: "Client"
     pages:
       - "api-reference/client"
-      - "api-reference/rest-api"
-      - "api-reference/duration"
-      - "api-reference/data-types"
-      - "api-reference/operators"
-      - "api-reference/sources"
-      - "api-reference/expectations"
 
+  - slug: "api-reference/rest-api"
+    title: "REST API"
+    pages:
+      - "api-reference/rest-api"
+
+
+  - slug: "api-reference/data-types"
+    title: "Data Types"
+    pages:
+      - "api-reference/data-types"
+      - "api-reference/duration"
+
+  - slug: "api-reference/operators"
+    title: "Operators"
+    pages:
+      - "api-reference/operators/assign"
+      - "api-reference/operators/filter"
+      - "api-reference/operators/drop"
+      - "api-reference/operators/select"
+      - "api-reference/operators/dropnull"
+      - "api-reference/operators/transform"
+      - "api-reference/operators/explode"
+      - "api-reference/operators/join"
+      - "api-reference/operators/groupby"
+      - "api-reference/operators/aggregate"
+      - "api-reference/operators/first"
+      - "api-reference/operators/dedup"
+
+  - slug: "api-reference/sources"
+    title: "Sources"
+    pages:
+      - "api-reference/sources"
 
   - slug: "api-reference/aggregations"
     title: "Aggregation"
     pages:
       - "api-reference/aggregations"
+
+  - slug: "api-reference/expectations"
+    title: "Expectations"
+    pages:
+      - "api-reference/expectations"
