docs: add rename operator; misc link fixes

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -33,6 +33,7 @@ sidebar:
       - "api-reference/operators/aggregate"
       - "api-reference/operators/first"
       - "api-reference/operators/dedup"
+      - "api-reference/operators/rename"
 
   - slug: "api-reference/sources"
     title: "Sources"
