--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ protobuf = "^4.22.4"
 frozendict = "^2.3.8"
 numpy = [
     { version = "1.24.4", python = "<3.12" },
-    { version = "^1.26.3", python = "~3.12" }
+    { version = "^1.26.3", python = "~3.12" },
 ]
 
 [tool.poetry.dev-dependencies]
@@ -67,7 +67,7 @@ testpaths = [
     "fennel/featureset",
     "fennel/sources",
     "docs/examples",
-    "examples"
+    "examples",
 ]
 python_files = [
     "docs/examples/*/*.py",
