--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ numpy = [
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 black = "^24.0.0"
+curlify = "2.2.1"
 mypy = "^0.981"
 pyarrow = "^14.0.2"
 vendoring = "^1.2.0"
