--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ numpy = [
     { version = "1.24.4", python = "<3.12" },
     { version = "^1.26.3", python = "~3.12" },
 ]
+pytest-timeout = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
