--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ numpy = [
     { version = "^1.26.3", python = "~3.12" },
 ]
 pytest-timeout = "^2.2.0"
+pytest = "7.1.3"
+pytest-rerunfailures = "^13.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
