docs: add useful tips and update installation instructions

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -61,10 +61,9 @@ sidebar:
       - "observability/newrelic"
       - "observability/alerting"
 
-  - 
-    slug: "misc"
-    title: "Misc."
+  - slug: "useful-tips"
+    title: "Useful Tips"
     pages:
-      - "misc/python-environment"
-      - "misc/troubleshooting-guide"
-      - "misc/performance-tuning"
+      - "useful-tips/code-organization"
+      - "useful-tips/python-environment"
+      - "useful-tips/troubleshooting"
