docs: document branch under concepts

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -16,6 +16,7 @@ sidebar:
       - "concepts/dataset"
       - "concepts/pipeline"
       - "concepts/featureset"
+      - "concepts/branch"
 
 
   - slug: "architecture"
