docs: add draft pages for init, clone, delete branch

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -10,6 +10,9 @@ sidebar:
       - "api-reference/client/extract-historical-progress"
       - "api-reference/client/extract-historical-cancel"
       - "api-reference/client/lookup"
+      - "api-reference/client/init-branch"
+      - "api-reference/client/clone-branch"
+      - "api-reference/client/delete-branch"
 
   - slug: "api-reference/rest-api"
     title: "REST API"
