docs: update docs to reflect some recent changes

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -48,6 +48,7 @@ sidebar:
       - "api-reference/operators/rename"
       - "api-reference/operators/window"
       - "api-reference/operators/summarize"
+      - "api-reference/operators/union"
 
   - slug: "api-reference/sources"
     title: "Sources"
