--- a/docs/api.yml
+++ b/docs/api.yml
@@ -73,6 +73,7 @@ sidebar:
       - "api-reference/aggregations/stddev"
       - "api-reference/aggregations/lastk"
       - "api-reference/aggregations/distinct"
+      - "api-reference/aggregations/quantile"
 
 
   - slug: "api-reference/expectations"
