--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "1.0.5"
+version = "1.0.6"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [{ include = "fennel" }]
@@ -18,6 +18,7 @@ numpy = [
 pytest-timeout = "^2.2.0"
 pytest = "7.1.3"
 pytest-rerunfailures = "^13.0"
+sortedcontainers = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
