--- a/docs/api.yml
+++ b/docs/api.yml
@@ -59,6 +59,7 @@ sidebar:
       - "api-reference/sources/mysql"
       - "api-reference/sources/postgres"
       - "api-reference/sources/snowflake"
+      - "api-reference/sources/bigquery"
       - "api-reference/sources/s3"
       - "api-reference/sources/deltalake"
       - "api-reference/sources/hudi"
