Add client code + doc for kafka sink

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -51,22 +51,22 @@ sidebar:
       - "api-reference/operators/summarize"
       - "api-reference/operators/union"
 
-  - slug: "api-reference/sources"
-    title: "Sources"
+  - slug: "api-reference/connectors"
+    title: "Connectors"
     pages:
-      - "api-reference/sources/kafka"
-      - "api-reference/sources/kinesis"
-      - "api-reference/sources/webhook"
-      - "api-reference/sources/mysql"
-      - "api-reference/sources/postgres"
-      - "api-reference/sources/redshift"
-      - "api-reference/sources/mongo"
-      - "api-reference/sources/snowflake"
-      - "api-reference/sources/bigquery"
-      - "api-reference/sources/s3"
-      - "api-reference/sources/deltalake"
-      - "api-reference/sources/hudi"
-      - "api-reference/sources/avro"
+      - "api-reference/connectors/kafka"
+      - "api-reference/connectors/kinesis"
+      - "api-reference/connectors/webhook"
+      - "api-reference/connectors/mysql"
+      - "api-reference/connectors/postgres"
+      - "api-reference/connectors/redshift"
+      - "api-reference/connectors/mongo"
+      - "api-reference/connectors/snowflake"
+      - "api-reference/connectors/bigquery"
+      - "api-reference/connectors/s3"
+      - "api-reference/connectors/deltalake"
+      - "api-reference/connectors/hudi"
+      - "api-reference/connectors/avro"
 
   - slug: "api-reference/aggregations"
     title: "Aggregations"
