--- a/docs/index.yml
+++ b/docs/index.yml
@@ -13,6 +13,7 @@ sidebar:
     pages:
       - "concepts/introduction"
       - "concepts/source"
+      - "concepts/sink"
       - "concepts/dataset"
       - "concepts/pipeline"
       - "concepts/featureset"
