--- a/docs/algolia.config.json
+++ b/docs/algolia.config.json
@@ -20,7 +20,11 @@
 		"lvl3": "main h3",
 		"lvl4": "main h4",
 		"lvl5": "main h5",
-		"text": "main p:not(#section_title)"
+		"text": "main p:not(#section_title)",
+        "version": {
+            "selector": "#version-num",
+            "global": true
+        }
 	},
     "selectors_exclude": [
         "#sidenav"
