--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ packages = [{ include = "fennel" }]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pandas = "^1.0.0"
+python = "^3.9"
+pandas = {extras = ["performance"], version = "^2.2.2"}
 protobuf = "^4.22.4"
 frozendict = "^2.3.8"
 numpy = [
