hard code facet settings into algolia config

--- a/docs/algolia.config.json
+++ b/docs/algolia.config.json
@@ -28,5 +28,10 @@
 	},
     "selectors_exclude": [
         "#sidenav"
-    ]
+    ],
+    "custom_settings": {
+        "attributesForFaceting": [
+            "version"
+        ]
+    }
 }
