--- a/docs/package.json
+++ b/docs/package.json
@@ -2,9 +2,5 @@
   "name": "docs",
   "lockfileVersion": 3,
   "requires": true,
-  "packages": {
-    "": {
-      "name": "docs"
-    }
-  }
+  "packages": {}
 }
