--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "fennel-ai"
-version = "1.2.11"
+version = "1.3.0"
 description = "The modern realtime feature engineering platform"
 authors = ["Fennel AI <developers@fennel.ai>"]
 packages = [{ include = "fennel" }]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pandas = "^1.0.0"
+python = "^3.9"
+pandas = {extras = ["performance"], version = "^2.2.2"}
 protobuf = "^4.22.4"
 frozendict = "^2.3.8"
 numpy = [
