--- a/.github/workflows/packagr_publish.yml
+++ b/.github/workflows/packagr_publish.yml
@@ -14,7 +14,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-22.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     name: Run tests and publish latest version if succcessful
