--- a/.github/workflows/python_lint.yml
+++ b/.github/workflows/python_lint.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 jobs:
   checks:
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-22.04
     name: Lints and typecheck
     steps:
       - name: Check out source repository
