--- a/.github/workflows/test_linux.yml
+++ b/.github/workflows/test_linux.yml
@@ -21,7 +21,7 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-22.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     name: Unit tests with py-version ${{ matrix.python-version }}
