--- a/.github/workflows/trigger-build.yml
+++ b/.github/workflows/trigger-build.yml
@@ -12,7 +12,7 @@ on:
       - main
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-22.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     name: Run tests and publish latest version if succcessful
