--- a/docs/index.yml
+++ b/docs/index.yml
@@ -32,13 +32,6 @@ sidebar:
       - "architecture/technologies"
       - "architecture/cost-optimizations"
 
-  - slug: "security"
-    title: "Security"
-    pages:
-      - "security/overview"
-      - "security/deployment-model"
-      - "security/rbac"
-
   - slug: "data-quality"
     title: "Data Quality"
     pages:
@@ -68,8 +61,11 @@ sidebar:
       - "observability/lineage"
 
   - slug: "security-compliance"
-    title: "Security Compliance"
+    title: "Security & Compliance"
     pages:
+      - "security-compliance/overview"
+      - "security-compliance/deployment-model"
+      - "security-compliance/rbac"
       - "security-compliance/sso"
       - "security-compliance/scim"
 
