--- a/docs/index.yml
+++ b/docs/index.yml
@@ -54,8 +54,9 @@ sidebar:
   - slug: "observability"
     title: "Observability"
     pages:
-      - "observability/prometheus"
+      - "observability/metrics"
       - "observability/grafana"
+      - "observability/datadog"
       - "observability/newrelic"
       - "observability/alerting"
       - "observability/lineage"
